# inference-kernel

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
aot_kernel/: __init__.py  activation.py  gemm.py  norm.py
aot_kernel/csrc/: registration.cc
aot_kernel/csrc/activation/: silu.cu
aot_kernel/csrc/gemm/: gemm.cu  gemm_cutlass.cu  gemm_opt.cu
aot_kernel/csrc/include/: ops.h  registration.h
aot_kernel/csrc/norm/: rmsnorm.cu
benchmarks/: README.md  _harness.py
benchmarks/activation/: bench_relu.py  bench_silu.py
benchmarks/attention/: bench_attention.py
benchmarks/gemm/: bench_gemm.py  bench_scaled_gemm.py
benchmarks/norm/: bench_rmsnorm.py
csrc/activation/: binding.cpp  relu.cu
csrc/activation/naive/: silu.cu
csrc/activation/opt/: relu.cu
csrc/gemm/: binding.cpp  gemm.cu
csrc/gemm/naive/: gemm.cu  gemm_tcgen05.cu  gemm_wgmma.cu
csrc/include/: cast.cuh  dispatch.h
csrc/norm/: binding.cpp  rmsnorm.cu
csrc/norm/naive/: rmsnorm.cu
jit_kernel/: __init__.py  activation.py  attention.py  gemm.py  math.py  norm.py  utils.py
profile/gemm/: _run.py  profile.sh
python/inference_kernel/: __init__.py
python/inference_kernel/_build/: jit.py
python/inference_kernel/_common/: utils.py
python/inference_kernel/kernels/activation/: README.md  cuda_impl.py  eager_impl.py  torch_impl.py  triton_impl.py
python/inference_kernel/kernels/activation/naive/: cuda_impl.py  triton_impl.py
python/inference_kernel/kernels/activation/opt/: triton_impl.py
python/inference_kernel/kernels/activation/ref/: torch_impl.py
python/inference_kernel/kernels/activation/reference/: eager_impl.py
python/inference_kernel/kernels/activation/silu/: README.md  __init__.py  cuda_impl.py  torch_impl.py
python/inference_kernel/kernels/attention/: triton_impl.py
python/inference_kernel/kernels/attention/ref/: eager_impl.py
python/inference_kernel/kernels/gemm/: cuda_impl.py  eager_impl.py  torch_impl.py  triton_impl.py
python/inference_kernel/kernels/gemm/naive/: cuda_impl.py  triton_impl.py
python/inference_kernel/kernels/gemm/opt/: cuda_impl.py
python/inference_kernel/kernels/math/: torch_impl.py  triton_impl.py
python/inference_kernel/kernels/norm/: cuda_impl.py  eager_impl.py  torch_impl.py  triton_impl.py
python/inference_kernel/kernels/norm/naive/: cuda_impl.py
python/inference_kernel/kernels/norm/ref/: eager_impl.py
ref/: __init__.py  attention.py  gemm.py
scripts/: run_all_benches.py
src/inference_kernel/_build/: jit.py
src/inference_kernel/kernels/activation/silu/: cuda_impl.py  triton_impl.py
src/inference_kernel/kernels/activation/silu/csrc/: binding.cpp
tests/: conftest.py
tests/activation/: test_cuda.py  test_torch.py  test_triton.py
tests/activation/naive/: test_cuda.py  test_triton.py
tests/activation/opt/: test_triton.py
tests/activation/ref/: test_torch.py
tests/activation/silu/: test_cuda.py  test_torch.py  test_triton.py
tests/attention/: test_torch.py  test_triton.py
tests/attention/ref/: test_torch.py
tests/gemm/: test_cuda.py  test_torch.py  test_triton.py
tests/gemm/naive/: test_cuda.py  test_tensorcore.py  test_triton.py
tests/gemm/opt/: test_cuda.py
tests/gemm/ref/: test_torch.py
tests/math/: test_triton.py
tests/norm/: test_cuda.py  test_torch.py  test_triton.py
tests/norm/naive/: test_cuda.py  test_triton.py
tests/norm/ref/: test_torch.py
