[project]
name = "inference-kernel"
version = "0.0.1"
description = "GPU inference kernels: torch reference (ref), triton (jit_kernel), and CUDA (aot_kernel)"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.4",
    "triton>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-xdist",
    "ruff",
    "ipython",
    "matplotlib",
    "pre-commit",
    "ninja",
    "cmake>=3.26",
    "scikit-build-core>=0.10",
]

[build-system]
requires = ["scikit-build-core>=0.10", "torch>=2.4"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Pure-python packages shipped as-is; aot_kernel/_C is built by CMake and
# installed into the aot_kernel package via CMakeLists `install(TARGETS _C ...)`.
wheel.packages = ["ref", "jit_kernel", "aot_kernel"]
cmake.version = ">=3.26"
build.verbose = true
# scikit-build editable installs rebuild the extension on import when sources
# change; fine for dev.

[tool.uv]
# Build against the torch already in the venv (no isolated env re-downloading
# the ~2GB CUDA torch wheel; avoids ABI mismatch). Build deps (torch /
# scikit-build-core / cmake / ninja) must be present in the env.
no-build-isolation-package = ["inference-kernel"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "cuda: requires a CUDA device",
    "triton: requires triton (and a CUDA device)",
    "slow: long-running tests",
]
